src/_build/default/cparser.automaton
State 0:
## Known stack suffix:
##
## LR(1) items:
file' -> . file [ # ]
## Transitions:
-- On INTEGER shift to state 1
-- On EOF shift to state 2
-- On type_specifier shift to state 3
-- On function_definition shift to state 21
-- On function_declarator shift to state 22
-- On file shift to state 171
-- On external_declaration shift to state 172
-- On declaration shift to state 174
## Reductions:

State 1:
## Known stack suffix:
## INTEGER
## LR(1) items:
type_specifier -> INTEGER . [ STAR_CHR IDENTIFIER ]
## Transitions:
## Reductions:
-- On STAR_CHR IDENTIFIER
--   reduce production type_specifier -> INTEGER

State 2:
## Known stack suffix:
## EOF
## LR(1) items:
file -> EOF . [ # ]
## Transitions:
## Reductions:
-- On #
--   reduce production file -> EOF

State 3:
## Known stack suffix:
## type_specifier
## LR(1) items:
declaration -> type_specifier . declarator SEMI_CHR [ INTEGER EOF ]
function_declarator -> type_specifier . identifier parameter_declarator [ OPEN_BRACE_CHR ]
type_specifier -> type_specifier . STAR_CHR [ STAR_CHR IDENTIFIER ]
## Transitions:
-- On STAR_CHR shift to state 4
-- On IDENTIFIER shift to state 5
-- On identifier shift to state 6
-- On declarator shift to state 19
## Reductions:

State 4:
## Known stack suffix:
## type_specifier STAR_CHR
## LR(1) items:
type_specifier -> type_specifier STAR_CHR . [ STAR_CHR IDENTIFIER ]
## Transitions:
## Reductions:
-- On STAR_CHR IDENTIFIER
--   reduce production type_specifier -> type_specifier STAR_CHR

State 5:
## Known stack suffix:
## IDENTIFIER
## LR(1) items:
identifier -> IDENTIFIER . [ SUB_CHR STAR_CHR SEMI_CHR QUES_CHR OR_OP OPEN_PAREN_CHR OPEN_ANGLE_CHR NE_OP MOD_CHR LE_OP INC_OP GE_OP EQ_OP EQ_CHR DIV_CHR DEC_OP COMMA_CHR COLON_CHR CLOSE_PAREN_CHR CLOSE_ANGLE_CHR AND_OP ADD_CHR ]
## Transitions:
## Reductions:
-- On SUB_CHR STAR_CHR SEMI_CHR QUES_CHR OR_OP OPEN_PAREN_CHR OPEN_ANGLE_CHR NE_OP MOD_CHR LE_OP INC_OP GE_OP EQ_OP EQ_CHR DIV_CHR DEC_OP COMMA_CHR COLON_CHR CLOSE_PAREN_CHR CLOSE_ANGLE_CHR AND_OP ADD_CHR
--   reduce production identifier -> IDENTIFIER

State 6:
## Known stack suffix:
## type_specifier identifier
## LR(1) items:
declarator -> identifier . [ SEMI_CHR ]
function_declarator -> type_specifier identifier . parameter_declarator [ OPEN_BRACE_CHR ]
## Transitions:
-- On OPEN_PAREN_CHR shift to state 7
-- On parameter_declarator shift to state 18
## Reductions:
-- On SEMI_CHR
--   reduce production declarator -> identifier

State 7:
## Known stack suffix:
## OPEN_PAREN_CHR
## LR(1) items:
parameter_declarator -> OPEN_PAREN_CHR . CLOSE_PAREN_CHR [ OPEN_BRACE_CHR ]
parameter_declarator -> OPEN_PAREN_CHR . parameter_type_list CLOSE_PAREN_CHR [ OPEN_BRACE_CHR ]
## Transitions:
-- On INTEGER shift to state 1
-- On CLOSE_PAREN_CHR shift to state 8
-- On type_specifier shift to state 9
-- On parameter_type_list shift to state 12
-- On parameter_list shift to state 14
-- On parameter_declaration shift to state 17
## Reductions:

State 8:
## Known stack suffix:
## OPEN_PAREN_CHR CLOSE_PAREN_CHR
## LR(1) items:
parameter_declarator -> OPEN_PAREN_CHR CLOSE_PAREN_CHR . [ OPEN_BRACE_CHR ]
## Transitions:
## Reductions:
-- On OPEN_BRACE_CHR
--   reduce production parameter_declarator -> OPEN_PAREN_CHR CLOSE_PAREN_CHR

State 9:
## Known stack suffix:
## type_specifier
## LR(1) items:
parameter_declaration -> type_specifier . declarator [ COMMA_CHR CLOSE_PAREN_CHR ]
type_specifier -> type_specifier . STAR_CHR [ STAR_CHR IDENTIFIER ]
## Transitions:
-- On STAR_CHR shift to state 4
-- On IDENTIFIER shift to state 5
-- On identifier shift to state 10
-- On declarator shift to state 11
## Reductions:

State 10:
## Known stack suffix:
## identifier
## LR(1) items:
declarator -> identifier . [ SEMI_CHR COMMA_CHR CLOSE_PAREN_CHR ]
## Transitions:
## Reductions:
-- On SEMI_CHR COMMA_CHR CLOSE_PAREN_CHR
--   reduce production declarator -> identifier

State 11:
## Known stack suffix:
## type_specifier declarator
## LR(1) items:
parameter_declaration -> type_specifier declarator . [ COMMA_CHR CLOSE_PAREN_CHR ]
## Transitions:
## Reductions:
-- On COMMA_CHR CLOSE_PAREN_CHR
--   reduce production parameter_declaration -> type_specifier declarator

State 12:
## Known stack suffix:
## OPEN_PAREN_CHR parameter_type_list
## LR(1) items:
parameter_declarator -> OPEN_PAREN_CHR parameter_type_list . CLOSE_PAREN_CHR [ OPEN_BRACE_CHR ]
## Transitions:
-- On CLOSE_PAREN_CHR shift to state 13
## Reductions:

State 13:
## Known stack suffix:
## OPEN_PAREN_CHR parameter_type_list CLOSE_PAREN_CHR
## LR(1) items:
parameter_declarator -> OPEN_PAREN_CHR parameter_type_list CLOSE_PAREN_CHR . [ OPEN_BRACE_CHR ]
## Transitions:
## Reductions:
-- On OPEN_BRACE_CHR
--   reduce production parameter_declarator -> OPEN_PAREN_CHR parameter_type_list CLOSE_PAREN_CHR

State 14:
## Known stack suffix:
## parameter_list
## LR(1) items:
parameter_list -> parameter_list . COMMA_CHR parameter_declaration [ COMMA_CHR CLOSE_PAREN_CHR ]
parameter_type_list -> parameter_list . [ CLOSE_PAREN_CHR ]
## Transitions:
-- On COMMA_CHR shift to state 15
## Reductions:
-- On CLOSE_PAREN_CHR
--   reduce production parameter_type_list -> parameter_list

State 15:
## Known stack suffix:
## parameter_list COMMA_CHR
## LR(1) items:
parameter_list -> parameter_list COMMA_CHR . parameter_declaration [ COMMA_CHR CLOSE_PAREN_CHR ]
## Transitions:
-- On INTEGER shift to state 1
-- On type_specifier shift to state 9
-- On parameter_declaration shift to state 16
## Reductions:

State 16:
## Known stack suffix:
## parameter_list COMMA_CHR parameter_declaration
## LR(1) items:
parameter_list -> parameter_list COMMA_CHR parameter_declaration . [ COMMA_CHR CLOSE_PAREN_CHR ]
## Transitions:
## Reductions:
-- On COMMA_CHR CLOSE_PAREN_CHR
--   reduce production parameter_list -> parameter_list COMMA_CHR parameter_declaration

State 17:
## Known stack suffix:
## parameter_declaration
## LR(1) items:
parameter_list -> parameter_declaration . [ COMMA_CHR CLOSE_PAREN_CHR ]
## Transitions:
## Reductions:
-- On COMMA_CHR CLOSE_PAREN_CHR
--   reduce production parameter_list -> parameter_declaration

State 18:
## Known stack suffix:
## type_specifier identifier parameter_declarator
## LR(1) items:
function_declarator -> type_specifier identifier parameter_declarator . [ OPEN_BRACE_CHR ]
## Transitions:
## Reductions:
-- On OPEN_BRACE_CHR
--   reduce production function_declarator -> type_specifier identifier parameter_declarator

State 19:
## Known stack suffix:
## type_specifier declarator
## LR(1) items:
declaration -> type_specifier declarator . SEMI_CHR [ WHILE TILDE_CHR SUB_CHR STRING_LITERAL STAR_CHR SEMI_CHR RETURN OPEN_PAREN_CHR OPEN_BRACE_CHR INTEGER INC_OP IF IDENTIFIER FOR EOF DEC_OP CONSTANT CLOSE_BRACE_CHR BANG_CHR AMP_CHR ADD_CHR ]
## Transitions:
-- On SEMI_CHR shift to state 20
## Reductions:

State 20:
## Known stack suffix:
## type_specifier declarator SEMI_CHR
## LR(1) items:
declaration -> type_specifier declarator SEMI_CHR . [ WHILE TILDE_CHR SUB_CHR STRING_LITERAL STAR_CHR SEMI_CHR RETURN OPEN_PAREN_CHR OPEN_BRACE_CHR INTEGER INC_OP IF IDENTIFIER FOR EOF DEC_OP CONSTANT CLOSE_BRACE_CHR BANG_CHR AMP_CHR ADD_CHR ]
## Transitions:
## Reductions:
-- On WHILE TILDE_CHR SUB_CHR STRING_LITERAL STAR_CHR SEMI_CHR RETURN OPEN_PAREN_CHR OPEN_BRACE_CHR INTEGER INC_OP IF IDENTIFIER FOR EOF DEC_OP CONSTANT CLOSE_BRACE_CHR BANG_CHR AMP_CHR ADD_CHR
--   reduce production declaration -> type_specifier declarator SEMI_CHR

State 21:
## Known stack suffix:
## function_definition
## LR(1) items:
external_declaration -> function_definition . [ INTEGER EOF ]
## Transitions:
## Reductions:
-- On INTEGER EOF
--   reduce production external_declaration -> function_definition

State 22:
## Known stack suffix:
## function_declarator
## LR(1) items:
function_definition -> function_declarator . compound_statement [ INTEGER EOF ]
## Transitions:
-- On OPEN_BRACE_CHR shift to state 23
-- On open_brace shift to state 24
-- On open_block shift to state 25
-- On compound_statement shift to state 170
## Reductions:

State 23:
## Known stack suffix:
## OPEN_BRACE_CHR
## LR(1) items:
open_brace -> OPEN_BRACE_CHR . [ WHILE TILDE_CHR SUB_CHR STRING_LITERAL STAR_CHR SEMI_CHR RETURN OPEN_PAREN_CHR OPEN_BRACE_CHR INTEGER INC_OP IF IDENTIFIER FOR DEC_OP CONSTANT CLOSE_BRACE_CHR BANG_CHR AMP_CHR ADD_CHR ]
## Transitions:
## Reductions:
-- On WHILE TILDE_CHR SUB_CHR STRING_LITERAL STAR_CHR SEMI_CHR RETURN OPEN_PAREN_CHR OPEN_BRACE_CHR INTEGER INC_OP IF IDENTIFIER FOR DEC_OP CONSTANT CLOSE_BRACE_CHR BANG_CHR AMP_CHR ADD_CHR
--   reduce production open_brace -> OPEN_BRACE_CHR

State 24:
## Known stack suffix:
## open_brace
## LR(1) items:
open_block -> open_brace . [ WHILE TILDE_CHR SUB_CHR STRING_LITERAL STAR_CHR SEMI_CHR RETURN OPEN_PAREN_CHR OPEN_BRACE_CHR INTEGER INC_OP IF IDENTIFIER FOR DEC_OP CONSTANT CLOSE_BRACE_CHR BANG_CHR AMP_CHR ADD_CHR ]
## Transitions:
## Reductions:
-- On WHILE TILDE_CHR SUB_CHR STRING_LITERAL STAR_CHR SEMI_CHR RETURN OPEN_PAREN_CHR OPEN_BRACE_CHR INTEGER INC_OP IF IDENTIFIER FOR DEC_OP CONSTANT CLOSE_BRACE_CHR BANG_CHR AMP_CHR ADD_CHR
--   reduce production open_block -> open_brace

State 25:
## Known stack suffix:
## open_block
## LR(1) items:
compound_statement -> open_block . close_block [ WHILE TILDE_CHR SUB_CHR STRING_LITERAL STAR_CHR SEMI_CHR RETURN OPEN_PAREN_CHR OPEN_BRACE_CHR INTEGER INC_OP IF IDENTIFIER FOR EOF ELSE DEC_OP CONSTANT CLOSE_BRACE_CHR BANG_CHR AMP_CHR ADD_CHR ]
compound_statement -> open_block . statement_list close_block [ WHILE TILDE_CHR SUB_CHR STRING_LITERAL STAR_CHR SEMI_CHR RETURN OPEN_PAREN_CHR OPEN_BRACE_CHR INTEGER INC_OP IF IDENTIFIER FOR EOF ELSE DEC_OP CONSTANT CLOSE_BRACE_CHR BANG_CHR AMP_CHR ADD_CHR ]
compound_statement -> open_block . declaration_list close_block [ WHILE TILDE_CHR SUB_CHR STRING_LITERAL STAR_CHR SEMI_CHR RETURN OPEN_PAREN_CHR OPEN_BRACE_CHR INTEGER INC_OP IF IDENTIFIER FOR EOF ELSE DEC_OP CONSTANT CLOSE_BRACE_CHR BANG_CHR AMP_CHR ADD_CHR ]
compound_statement -> open_block . declaration_list statement_list close_block [ WHILE TILDE_CHR SUB_CHR STRING_LITERAL STAR_CHR SEMI_CHR RETURN OPEN_PAREN_CHR OPEN_BRACE_CHR INTEGER INC_OP IF IDENTIFIER FOR EOF ELSE DEC_OP CONSTANT CLOSE_BRACE_CHR BANG_CHR AMP_CHR ADD_CHR ]
## Transitions:
-- On WHILE shift to state 26
-- On TILDE_CHR shift to state 27
-- On SUB_CHR shift to state 28
-- On STRING_LITERAL shift to state 29
-- On STAR_CHR shift to state 31
-- On SEMI_CHR shift to state 32
-- On RETURN shift to state 33
-- On OPEN_PAREN_CHR shift to state 34
-- On OPEN_BRACE_CHR shift to state 23
-- On INTEGER shift to state 1
-- On INC_OP shift to state 35
-- On IF shift to state 119
-- On IDENTIFIER shift to state 5
-- On FOR shift to state 120
-- On DEC_OP shift to state 36
-- On CONSTANT shift to state 37
-- On CLOSE_BRACE_CHR shift to state 121
-- On BANG_CHR shift to state 38
-- On AMP_CHR shift to state 39
-- On ADD_CHR shift to state 40
-- On whilekw shift to state 122
-- On unary_operator shift to state 41
-- On unary_expression shift to state 56
-- On type_specifier shift to state 157
-- On tilde_chr shift to state 43
-- On sub_chr shift to state 44
-- On string_literal shift to state 45
-- On statement_list shift to state 158
-- On statement shift to state 162
-- On star_chr shift to state 46
-- On shift_expression shift to state 58
-- On semi_chr shift to state 127
-- On selection_statement shift to state 128
-- On return shift to state 129
-- On relational_expression shift to state 59
-- On primary_expression shift to state 47
-- On postfix_expression shift to state 48
-- On open_brace shift to state 24
-- On open_block shift to state 25
-- On multiplicative_expression shift to state 62
-- On logical_or_expression shift to state 87
-- On logical_and_expression shift to state 89
-- On jump_statement shift to state 133
-- On iteration_statement shift to state 134
-- On inclusive_or_expression shift to state 99
-- On inc_op shift to state 51
-- On ifkw shift to state 135
-- On identifier shift to state 53
-- On forkw shift to state 140
-- On expression_statement shift to state 147
-- On expression shift to state 148
-- On exclusive_or_expression shift to state 92
-- On equality_expression shift to state 93
-- On declaration_list shift to state 163
-- On declaration shift to state 168
-- On dec_op shift to state 64
-- On constant shift to state 66
-- On conditional_expression shift to state 102
-- On compound_statement shift to state 150
-- On close_brace shift to state 160
-- On close_block shift to state 169
-- On cast_expression shift to state 75
-- On bang_chr shift to state 67
-- On assignment_expression shift to state 106
-- On and_expression shift to state 98
-- On amp_chr shift to state 68
-- On additive_expression shift to state 76
-- On add_chr shift to state 69
## Reductions:

State 26:
## Known stack suffix:
## WHILE
## LR(1) items:
whilekw -> WHILE . [ OPEN_PAREN_CHR ]
## Transitions:
## Reductions:
-- On OPEN_PAREN_CHR
--   reduce production whilekw -> WHILE

State 27:
## Known stack suffix:
## TILDE_CHR
## LR(1) items:
tilde_chr -> TILDE_CHR . [ TILDE_CHR SUB_CHR STRING_LITERAL STAR_CHR OPEN_PAREN_CHR INC_OP IDENTIFIER DEC_OP CONSTANT BANG_CHR AMP_CHR ADD_CHR ]
## Transitions:
## Reductions:
-- On TILDE_CHR SUB_CHR STRING_LITERAL STAR_CHR OPEN_PAREN_CHR INC_OP IDENTIFIER DEC_OP CONSTANT BANG_CHR AMP_CHR ADD_CHR
--   reduce production tilde_chr -> TILDE_CHR

State 28:
## Known stack suffix:
## SUB_CHR
## LR(1) items:
sub_chr -> SUB_CHR . [ TILDE_CHR SUB_CHR STRING_LITERAL STAR_CHR OPEN_PAREN_CHR INC_OP IDENTIFIER DEC_OP CONSTANT BANG_CHR AMP_CHR ADD_CHR ]
## Transitions:
## Reductions:
-- On TILDE_CHR SUB_CHR STRING_LITERAL STAR_CHR OPEN_PAREN_CHR INC_OP IDENTIFIER DEC_OP CONSTANT BANG_CHR AMP_CHR ADD_CHR
--   reduce production sub_chr -> SUB_CHR
